integration_tests/codegen_fail/fail/scalar/derive_input/attr_transparent_and_with.stderr
error: GraphQL scalar `with = <path>` attribute can\'t be combined with `transparent`. You can specify custom resolvers with `to_output`, `from_input`, `parse_token` attributes and still use `transparent` for unspecified ones.
 --> fail/scalar/derive_input/attr_transparent_and_with.rs:3:25
  |
3 | #[graphql_scalar(with = Self, transparent)]
  |                         ^^^^
